# cc_app_rust_url2md

./: .gitignore  CLAUDE.md  Cargo.toml  Changelog.md  README.md  Usage.md
docs/superpowers/plans/: 2026-07-02-url2md-conversion.md
docs/superpowers/specs/: 2026-07-02-url2md-conversion-design.md
src/: main.rs
test_data/: github.md
