[package]
name = "url2md"
version = "0.1.0"
edition = "2021"
description = "Extract text from Windows .url shortcut files and save as Markdown"
authors = ["Tony Baloney"]

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime and channels
tokio = { version = "1.35", features = ["full"] }
async-channel = "2.1"

# Progress bars and styling
indicatif = "0.17"
console = "0.15"

# Directory traversal
walkdir = "2.5"

# Error handling
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
